# lattistore

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
proto/: id_provider.proto  node.proto
src/: acceptor.rs  client.rs  client_service.rs  common.rs  id_provider_service.rs  lib.rs  node_services.rs  patch.rs  patch_decree.rs  paxos_common.rs  proposer.rs  replica.rs  server.rs
src/front/: ast.rs  compile.rs  lang.lalrpop  mod.rs
